--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 discord = "^1.7.3"
 replit = "^3.2.4"
+Flask = "^2.0.2"
+youtube_dl = "^2021.12.17"
 
 [tool.poetry.dev-dependencies]
 
