--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 discord == "^1.7.3"
 replit == "^3.2.4"
 Flask == "^2.0.2"
-youtube_dl -= "^2021.12.17"
+youtube_dl == "^2021.12.17"
 db == "^0.1.1"
