--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-discord
-Flask
-youtube_dl == 2021.12.17
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==21.4.0
+chardet==4.0.0
+discord==1.7.3
+discord.py==1.7.3
+gunicorn==20.1.0
+idna==3.3
+multidict==6.0.2
+typing_extensions==4.1.0
+yarl==1.7.2
+youtube-dl==2021.12.17
