--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
 aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.4.0
+cffi==1.15.0
 chardet==4.0.0
+click==8.0.3
+colorama==0.4.4
 discord==1.7.3
 discord.py==1.7.3
-flask
+Flask==2.0.2
 gunicorn==20.1.0
 idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
 multidict==6.0.2
+psycopg2==2.9.3
+pycparser==2.21
+PyNaCl==1.5.0
 typing_extensions==4.1.0
-pynacl
+Werkzeug==2.0.3
 yarl==1.7.2
 youtube-dl==2021.12.17
