--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.4.0
+beautifulsoup4==4.10.0
+certifi==2021.10.8
 cffi==1.15.0
 chardet==4.0.0
+charset-normalizer==2.0.12
 click==8.0.3
 colorama==0.4.4
 discord==1.7.3
@@ -17,7 +20,11 @@ multidict==6.0.2
 psycopg2==2.9.3
 pycparser==2.21
 PyNaCl==1.5.0
+python-dotenv==0.19.2
+requests==2.27.1
+soupsieve==2.3.1
 typing_extensions==4.1.0
+urllib3==1.26.8
 Werkzeug==2.0.3
 yarl==1.7.2
 youtube-dl==2021.12.17
